# kafka_mcp_server

./: .env_example  .gitignore  README.md  gittesting.md  pyproject.toml  requirements.txt  server.json  upgrades.md  verify_kafka.py
.github/workflows/: ci.yml
infra/: kafka_docker_compose.yml  kafka_docker_start.sh  kafka_docker_stop.sh
src/: __init__.py  agent_graph.py  agent_models.py  auth.py  client.py  main.py  prompt_template.py  schema_registry.py  server.py  service.py  system_prompts.py  validation.py
test/: conftest.py  test_agent_flow.py  test_auth.py  test_byok.py  test_main.py  test_readme_surface.py  test_registry_metadata.py  test_schema_registry.py  test_server.py  test_tools.py  test_unit.py  test_validation.py
